--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -90,7 +90,7 @@
   height: calc(100vh - (50px + 90px));
   background: rgba(0, 0, 0, 0.5);
   position: fixed;
-  top: calc(50px + 90px);
+  top: calc(50px + 135px);
   left: 0;
   z-index: 1;
   transition: 0.3s ease-in-out;
@@ -142,7 +142,7 @@
   display: flex;
   align-items: center;
   z-index: 1;
-  width: 150px;
+  width: 270px;
   cursor: pointer;
   transition: 0.3s ease-in-out;
   background: #faf6f5;
@@ -157,11 +157,12 @@
     border-bottom: 1px solid rgb(238, 237, 236);
     border-right: 1px solid rgb(238, 237, 236);
     height: 45px;
-    width: 150px;
+    width: 270px;
     padding-left: 20px;
     width: 100%;
     padding-right: 14px;
     justify-content: space-between;
+    white-space: nowrap;
 
     img {
       transform: rotate(0deg);
@@ -180,7 +181,7 @@
         opacity: 1;
         visibility: visible;
         filter: blur(0px);
-        left: 150px;
+        left: 270px;
       }
     }
 
@@ -204,7 +205,7 @@
   opacity: 0;
   visibility: hidden;
   top: 0px;
-  left: 130px;
+  left: 255px;
   @extend %border;
   background: #faf8f7;
   filter: blur(5px);
