--- a/components/HomeImages/HomeImages.module.scss
+++ b/components/HomeImages/HomeImages.module.scss
@@ -17,7 +17,7 @@
   background: #f3eeea;
   @include mobile {
     padding-top: 50px;
-    background: rgb(243,238,234);
+    background: rgb(243, 238, 234);
   }
 }
 
@@ -45,7 +45,7 @@
 .textWrapper {
   position: absolute;
   top: calc(50vh - (260px / 2));
-  left: calc(50% - (480px / 2));
+  left: calc(50% - (530px / 2));
   background: rgba(243, 238, 234, 0.6);
   padding: 60px;
   border-radius: 5px;
@@ -62,12 +62,13 @@
   @include tablet {
     top: 200px;
     padding: 40px 20px;
-    left: calc(50% - (337px / 2));
     min-width: 338px;
+    left: calc(50% - (378px / 2));
   }
 
   @include mobile {
     padding: 30px 20px;
+    left: calc(50% - (338px / 2));
   }
 
   &.showBlock {
@@ -101,6 +102,10 @@
     @include tablet {
       font-size: 32px;
       letter-spacing: 0;
+    }
+
+    @include mobile {
+      max-width: 250px;
     }
 
     &::before {
