--- a/styles/pressRelease.module.scss
+++ b/styles/pressRelease.module.scss
@@ -61,6 +61,7 @@
     color: #212121;
     line-height: 150%;
     font-size: 16px;
+    text-align: justify;
 
     span {
       font-weight: 700;
