--- a/components/Catalog/CatalogBox/CatalogBox.module.scss
+++ b/components/Catalog/CatalogBox/CatalogBox.module.scss
@@ -11,7 +11,7 @@
   justify-content: space-between;
   padding: 25px 35px;
 
-  @include mobile {
+  @include tablet {
     padding: 25px 8px;
   }
 
